--- a/style.css
+++ b/style.css
@@ -3,10 +3,192 @@
     padding:0;
 }
 body{
-    height:100vh;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    
+}
+
+/*header sections*/
+.header, .footer{
+    background-color: #14293A;
+    padding-left: 15vw;
+    padding-right:15vw;
+    color:#F9FAF8; 
 }
 .header{
-    background-color: #1F2937;
-    height: 30vh;
+    display: flex;
+    flex-direction: column;
+    font-family: sans-serif, sans-serif;
+    padding-top: 16px;
+    padding-bottom: 64px;
+    
+}
+/*header subsection 1*/
+.header-sub-1{
+    display: flex;
+    justify-content: space-between;
+   
+    
+}
+.logo{
+    font-size: 24px;
+    color: #F9FAF8;
+    
+}
+.header-link-menu{
+    display: flex;
+    gap: 16px;
+    flex-basis: 50%;
+    justify-content: end;
+}
+/*header subsection 2*/
+.header-sub-2{
+    display: flex;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    justify-content: space-between;
+    gap:16px;
+   
+}
+.header-sub-2-left{
+    flex-basis: 50%;
+    padding-right: 32px;
+    padding-top: 16px;
+}
 
+.hero-main{
+    font-size: 48px;
+    font-weight:1000;
+    color: #F9FAF8;
+}
+.header div p{
+    color: #E5E7EB;
+    font-size: 18px; 
+}
+.top-button{
+    background-color: #3882f6;
+    padding: 6px 32px;
+    border-radius: 8px;
+    border: none;
+    margin-top: 16px;
+    color: #F9FAF8;
+}
+.header-image{
+    flex-basis: 50%;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
+}
+
+/*content section*/
+.content{
+    padding-top: 64px;
+    flex: 1 1 auto;
+}
+/*content sub section 1*/
+.content-sub-1{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding-bottom: 128px;
+}
+.info-head{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    padding-bottom:64px;
+}
+.info-container{
+    display: flex;
+    justify-content: space-around;
+    gap: 16px;
+    padding-right: 23vw;
+    padding-left: 23vw;
+
+
+}
+.one-info-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: center;
+    flex-wrap: wrap;
+    flex-basis: 200px;
+    gap: 8px;
+    
+}
+
+.image-box{
+    display: flex;
+    border: 4px solid #3882F6;
+    border-radius: 16px;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 190px;
+}
+/*content subsection 2*/
+.content-sub-2{
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    padding-left: 25vw;
+    padding-right: 23vw;
+    padding-top: 72px;
+    padding-bottom: 48px;
+    gap: 8px;
+}
+.quote{
+    font-family: Optima, sans-serif ;
+    font-style: italic;
+    color: #1F2937;
+    font-size: 30px;
+}
+.quote-credit{
+    align-self: flex-end;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+/*content subsection #3*/
+
+.content-sub-3{
+    background-color: #3882F6;
+    margin-left: 15vw;
+    margin-right: 15vw;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    display: flex;
+    justify-content: space-between;
+    padding: 32px 64px;
+    border-radius: 8px ;
+    color: white;
+}
+
+.button-2{
+    padding: 8px 64px;
+    border-radius: 8px;
+    background-color: #3882F6;
+    border: 2px solid white ;
+    font-weight: bolder;
+    color:white;
+}
+.content-sub-3-left h4{
+    font-size: 20px;
+    font-family: Optima, sans-serif ;
+}
+.content-sub-3-left p{
+   color: rgb(226, 226, 226);
+   font-family: Optima, sans-serif ;
+}
+
+/*footer*/
+.footer{
+    text-align: center;
+    padding: 41px;
 }
