--- a/style.css
+++ b/style.css
@@ -29,12 +29,15 @@ body{
 .header-sub-1{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap ;
+    gap: 32px;
    
     
 }
 .logo{
     font-size: 24px;
     color: #F9FAF8;
+
     
 }
 .header-link-menu{
@@ -42,6 +45,8 @@ body{
     gap: 16px;
     flex-basis: 50%;
     justify-content: end;
+    
+    overflow: hidden;
 }
 /*header subsection 2*/
 .header-sub-2{
@@ -57,18 +62,25 @@ body{
     padding-right: 32px;
     padding-top: 16px;
 }
+.header-sub-2-left p{
+    padding-top: 8px;
+}
 
 .hero-main{
     font-size: 48px;
     font-weight:1000;
-    color: #F9FAF8;
+    background: linear-gradient(red, yellow);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    
 }
 .header div p{
     color: #E5E7EB;
     font-size: 18px; 
 }
 .top-button{
-    background-color: #3882f6;
+    background-color: #3c5f97;
     padding: 6px 32px;
     border-radius: 8px;
     border: none;
